feat: add temporary image transfer
